[package]
name = "battgen"
version = "0.1.0"
authors = ["phansel <15009257+phansel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
ron = "*"
colored = "1.9"
